@@ -1,6 +1,6 @@
 Package: strucchange
 Version: 1.5-2
-Date: 2016-10-06
+Date: 2019-10-11
 Title: Testing, Monitoring, and Dating Structural Changes
 Authors@R: c(person(given = "Achim", family = "Zeileis", role = c("aut", "cre"), email = "Achim.Zeileis@R-project.org",
                     comment = c(ORCID = "0000-0003-0918-3766")),
@@ -22,6 +22,6 @@ Description: Testing, monitoring and dating structural changes in (linear)
              Emphasis is always given to methods for visualizing the data.
 LazyData: yes
 Depends: R (>= 2.10.0), zoo, sandwich
-Suggests: stats4, car, dynlm, e1071, foreach, lmtest, mvtnorm, tseries, strucchangeArmadillo
+Suggests: stats4, car, dynlm, e1071, foreach, lmtest, mvtnorm, tseries
 Imports: graphics, stats
 License: GPL-2 | GPL-3
