@@ -10,9 +10,11 @@ Changes in Version 1.5-2
 
   o The default recresid() gained an argument qr.tol = 1e-7 which allows to
     pass another tolerance to lm.fit() for detecting linear dependencies in
-    (small) subsamples.
+    (small) subsamples. Furthermore, an argument engine = c("R", "C") has been
+    added along with an alternative faster C implementation.
     
-  o The formula method of breakpoints() now passes ... to recresid().
+  o The formula method of breakpoints() now passes ... to recresid(), e.g., for
+    the qr.tol and engine arguments above.
   
   o The breaks argument of the breakpoints() formula argument is now checked
     to be at least 1.
